--- a/public/stylesheets/buster-server.css
+++ b/public/stylesheets/buster-server.css
@@ -14,6 +14,28 @@ h2 {
     -webkit-border-radius: 12px;
     list-style: none;
     padding: 18px 6px 12px 82px;
+    width: 710px;
+}
+
+.browsers li > div {
+    padding-left: 85px;
+    margin-left: 10px;
+    display: table;
+    height: 70px;
+    #position: relative;
+    overflow: hidden;
+}
+
+.browsers li > div > div {
+    display: table-cell;
+    vertical-align: middle;
+    #position: absolute;
+    #top: 50%;
+}
+
+.browsers li > div > div > div {
+    #position: relative;
+    #top: -50%;
 }
 
 .browsers h3 {
@@ -58,8 +80,6 @@ h2 {
 }
 
 .browsers li > div {
-    padding-left: 85px;
-    margin-left: 10px;
     background: url(../images/linux-64.png) no-repeat;
 }
 
